--- a/templates/node-vanilla/package.json
+++ b/templates/node-vanilla/package.json
@@ -11,19 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
     "morgan": "^1.10.0",
     "oracledb": "^6.7.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "concurrently": "^9.1.2",
     "eslint": "^9.18.0",
-    "@eslint/js": "^9.18.0",
     "eslint-plugin-n": "^17.15.1",
-    "globals": "15.14.0",
-    "vite": "^6.0.7"
+    "globals": "^16.3.0",
+    "vite": "^7.0.3"
   }
 }
