--- a/templates/node-vue/package.json
+++ b/templates/node-vue/package.json
@@ -10,22 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
     "morgan": "^1.10.0",
     "oracledb": "^6.7.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.17"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitejs/plugin-vue": "^6.0.0",
     "concurrently": "^9.1.2",
-    "eslint": "^9.18.0",
-    "@eslint/js": "^9.18.0",
+    "eslint": "^9.30.1",
+    "@eslint/js": "^9.30.1",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-vue": "^9.32.0",
-    "globals": "15.14.0",
-    "vite": "^6.0.11"
+    "globals": "^16.3.0",
+    "vite": "^7.0.3"
   }
 }
